# tesp

./: .gitignore  .readthedocs.yaml  DISCLAIMER.txt  LICENSE  README.md  autotest.py  autotest.sh  autotest_long.py  environment  readthedocs.yml  requirements.txt  tesp.env  tesp.sh  tesp.xml  tespCompile.sh
design/: HVACDSOT_class.plantuml  HVCDSOT_sequence_test.plantuml  substation_sequence.plantuml  substation_sequence_simpler.plantuml
doc/: Archive.rst  Bibliography.rst  Building_TESP.rst  LICENSE.rst  (+38 more)
src/energyplus/: .gitignore  Makefile.am  Makefile.win  config.h.win  configure.ac  consensus.cpp  consensus.h  eplus_agent.cpp  eplus_agent_helics.cpp  eplus_json.cpp  go.sh  jsoncpp.cpp  test.sh  test_comm.cpp
src/energyplus/m4/: fncs_arg_parse.m4  fncs_check_func.m4  fncs_check_header.m4  fncs_check_package.m4  fncs_cxx_nullptr.m4
src/tesp_support/: .gitignore  AUTHORS  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  code_reference.rst  env_working.txt  pyproject.toml  setup.cfg  setup.py
src/tesp_support/tesp_support/: DSOT_case_comparison_plots.py  DSOT_map_results.py  DSOT_plots.py  DSOT_sankey  DSOT_sankey.py  DSO_quadratic_curves.py  DSO_rate_making.py  HDF5_read.py  PSMv3toDAT.py  README.md  TMY2EPW.py  TMY3toCSV.py  TMYtoEPW.py  Wh_Energy_Purchases.py  __init__.py  api.py  auction.py  battery_dsot.py  battery_dsot_v1.py  case_config.py  case_merge.py  case_merge_dsot.py  case_merge_dsot_v1.py  commbldgenerator.py  commercial_feeder_generator.py  commercial_feeder_glm.py  copperplateFeederGenerator_dsot.py  copperplateFeederGenerator_dsot_v1.py  copperplate_feeder_generator.py  copperplate_feeder_glm.py  customer_CFS.py  data.py  double_auction.py  dso_CFS.py  dso_helper_functions.py  dso_map.py  dso_market_dsot.py  dso_market_dsot_v1.py  electric_vehicle_dsot.py  electric_vehicle_dsot_v1.py  (+80 more)
src/tesp_support/tesp_support/api/: README.md  __init__.py  data.py  entity.py  gld_feeder_generator.py  gridpiq.py  helpers.py  make_ems.py  metrics.py  metrics_api.py  metrics_base_api.py  metrics_collector.py  model.py  model_GLM.py  modifier.py  modify_GLM.py  non_network.py  parse_helpers.py  player.py  player_f.py  process_eplus.py  process_gld.py  process_houses.py  process_inv.py  process_pypower.py  process_voltages.py  recs_api.py  recs_gld_house_parameters.py  schedule_client.py  schedule_server.py  store.py  substation.py  test_runner.py  time_helpers.py  tso_PYPOWER.py  tso_PYPOWER_f.py  tso_helpers.py  tso_psst.py  tso_psst_f.py
src/tesp_support/tesp_support/api/datafiles/: feeder_defaults.json  glm_classes.json  grid_PIQ.json
src/tesp_support/tesp_support/consensus/: DG_Agent_Helics.py  DSO_Agent_Helics.py  Microgrid_Agent_Helics.py  README.md  __init__.py  battery_dsot.py  case_merge.py  consensus_generator.py  consensus_microgrid.py  consensus_substation.py  dg_agent.py  dso_agent.py  dso_market.py  dso_market_dsot.py  feederGenerator_dsot.py  forecasting.py  forecasting_TM.py  generator.py  glm_dict_TM.py  glm_dictionary.py  helpers_dsot.py  hvac_dsot.py  microgrid.py  microgrid_agent.py  residential_feeder_glm.py  retail_market.py  retail_market_dsot.py  substation.py  water_heater_dsot.py  weatherAgent_Helics.py  weather_agent.py
src/tesp_support/tesp_support/dsot/: DSOT_case_comparison_plots.py  DSOT_map_results.py  DSOT_plots.py  DSOT_sankey.py  README.md  Wh_Energy_Purchases.py  __init__.py  balance_sheet_functions.py  battery_agent.py  case_comparison_plots.py  case_merge.py  case_merge_dsot.py  customer_CFS.py  dso_CFS.py  dso_helper_functions.py  dso_map.py  dso_market.py  dso_market_dsot.py  dso_quadratic_curves.py  dso_rate_making.py  dsot_load_less_solar.py  dsot_solar.py  ev_agent.py  feeder_generator_dsot.py  forecasting.py  forecasting_dsot.py  gen_map.py  generator_balance_sheet_func.py  glm_dict_dsot.py  glm_dictionary.py  helpers_dsot.py  helpers_dsot_dod.py  hvac_agent.py  load_less_solar.py  map_results._py  map_results.py  plots.py  pv_agent.py  residential_feeder_glm.py  residential_feeder_glm_RECS_inputs.py  (+12 more)
src/tesp_support/tesp_support/dsot/auto_run/: DSOT solar PV capacities.csv  dsot_solar.kml
src/tesp_support/tesp_support/glmModel/: glmclasses.py  model.py  modifier.py
src/tesp_support/tesp_support/loadshed/: __init__.py  loadshed.py  plot_loadshed.py
src/tesp_support/tesp_support/matpower/: __init__.py  matpower_dict.py  process_matpower.py
src/tesp_support/tesp_support/original/: README.md  case_merge.py  commercial_feeder_glm.py  commercial_feeder_glm_dod.py  copperplate_feeder_glm.py  curve.py  fncs.py  glm_dictionary.py  hvac_agent.py  parse_msout.py  player_f.py  precool.py  prep_eplus.py  prep_precool.py  prep_substation.py  process_agents.py  resdential_feeder_glm.py  residential_feeder_glm.py  simple_auction.py  substation.py  substation_f.py  tesp_case.py  tesp_config.py  tesp_monitor.py  tesp_monitor_ercot.py  tso_PYPOWER_f.py  tso_psst_f.py
src/tesp_support/tesp_support/sgip1/: __init__.py  compare_auction.py  compare_csv.py  compare_hvac.py  compare_prices.py  compare_pypower.py
src/tesp_support/tesp_support/solar/: dsot_load_less_solar.py  dsot_solar.py
src/tesp_support/tesp_support/valuation/: TransmissionMetricsProcessor.py  __init__.py
src/tesp_support/tesp_support/weather/: EPWtoDAT.py  PSM_download.py  PSMv3toDAT.py  README.md  TMY3toCSV.py  TMYtoEPW.py  __init__.py  forecast.py  weatherAgent_Helics.py  weather_agent.py  weather_agent_f.py
src/tesp_support/tesp_support/weather/auto_run/: 200busmappingv5.xlsx
src/tesp_support/tesp_support/weather_download/: PSM_download.py
src/tesp_support/test/: Demo.json  README.rst  pprun.py  pptest.py  process_gld_v2.1.py  process_matpower_v2.4.py  tesp_x.py  test.py  test1.py  test2.py  test3.py  test_trans_metrics_proc.py
src/tesp_support/test/api/: clean.sh  feeder_generator_demo.py  main.py  pprun.py  test.csv  test_houses_metrics_billing_meter.h5  testing.glm
src/tesp_support/test/original/: glm_test.py  pptest.py  process_gld_v2.1.py  process_matpower_v2.4.py  tesp_x.py  test.py  test1.py  test2.py  test3.py  test_trans_metrics_proc.py
(+2447 files in other folders)
