[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tesp_support"
version = "1.3.0"

[tool.setuptools.packages.find]
where = ["tesp_support"]

[tool.setuptools.package-data]
"api.datafiles" = ["*.json"]

[project.scripts]
download_data = "tesp_support.api.data:download_data"
download_analysis = "tesp_support.api.data:download_analysis"
download_examples = "tesp_support.api.data:download_examples"
