[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = "tesp_support"
dynamic = ["version"]
authors = [{name = "Trevor Hardy", email = "trevor.hardy@pnnl.gov"}]
maintainers = [
    {name = "Mitch Pelton", email = "mitch.pelton@pnnl.gov"},
    {name = "Fred Rutz", email = "fredrick.rutz@pnnl.gov"},
    {name = "Jessica Kerby", email = "jessica.kerby@pnn.gov"},
    {name = "Nathan Gray", email = "nathan.gray@pnnl.gov"},
    {name = "Trevor Hardy", email = "trevor.hardy@pnnl.gov"}
]
description = "Python APIs for the Transactive Energy Simulation Platform"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["power system", "transactive", "energy"]
requires-python = ">=3.10"
dependencies = [
    "importlib-resources~=6.4.5",
    "h5py~=3.12.1",
    "helics~=3.5.3",
    "pandas~=2.2.3",
    "numpy~=1.26.4",
    "scipy~=1.14.1",
    "matplotlib~=3.9.2",
    "networkx~=3.4.2",
    "pyjson5~=1.6.7",
    "PYPOWER==5.1.16",
    "pyutilib==6.0.0",
    "Pyomo==6.5.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://github.com/pnnl/tesp"
Documentation = "https://tesp.readthedocs.io"
Repository = "https://github.com/pnnl/tesp"

[tool.setuptools.packages.find]
where = [".","tesp_support"]

[tool.setuptools.dynamic]
version = {attr = "tesp_support.__version__"}

[tool.setuptools.package-data]
api = ["*"]
"api.datafiles" = ["*.json", "*.db"]

[project.scripts]
tesp_components = "tesp_support.api.data:tesp_component"
schedule_server = "tesp_support.api.schedule_server:main"