[wheel]
universal = 1

[metadata]
author = Trevor Hardy
author_email = trevor.hardy@PNNL.gov
url = https://github.com/pnnl/tesp
description = Python support for the Transactive Energy Simulation Platform
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
keywords = transactive
license= BSD,
classifiers =
    Development Status :: 4 - Beta,
    Environment :: Console,
    Intended Audience :: Developers,
    Intended Audience :: Education,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: BSD License,
    Natural Language :: English,
    Operating System :: OS Independent,
    Programming Language :: Python,
    Programming Language :: Python :: 3.8,
    Topic :: Scientific/Engineering

[options]
zip_safe = False
python_requires = >=3.8
install_requires =
    pandas~=2.0.1
    numpy~=1.24.3
    scipy~=1.10.1
    matplotlib~=3.7.1
    networkx~=3.1
    PYPOWER==5.1.16
    pyutilib==6.0.0
    Pyomo==6.5.0
