[metadata]
name = tesp_support
version = file: version
author = Trevor Hardy
author_email = trevor.hardy@PNNL.gov
url = https://github.com/pnnl/tesp
description = Python support for the Transactive Energy Simulation Platform
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
keywords = transactive
license = BSD
classifiers =
    Development Status :: 4 - Beta,
    Environment :: Console,
    Intended Audience :: Developers,
    Intended Audience :: Education,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: BSD License,
    Natural Language :: English,
    Operating System :: OS Independent,
    Programming Language :: Python,
    Programming Language :: Python :: 3.8,
    Topic :: Scientific/Engineering

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
python_requires = >=3.8
install_requires =
    importlib-resources~=6.4.5
    h5py~=3.11.0
    helics~=3.5.3
    pandas~=2.2.3
    numpy~=1.26.4
    scipy~=1.14.1
    matplotlib~=3.9.2
    networkx~=3.4.2
    pyjson5~=1.6.7
    PYPOWER==5.1.16
    pyutilib==6.0.0
    Pyomo==6.5.0

[options.packages.find]
where = tesp_support

[options.package_data]
api.datafiles =
    *.json
    *.db

[options.entry_points]
console_scripts =
    tesp_component = tesp_support.api.data:tesp_component
    schedule_server = tesp_support.api.schedule_server:main
